Fix scrollbar

--- a/slak-frontend/src/css/app.scss
+++ b/slak-frontend/src/css/app.scss
@@ -5,4 +5,5 @@ body,
 .q-page-container,
 .q-page {
   height: 100%;
+  overflow: hidden;
 }
